--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.1"
   },
   "scripts": {
@@ -26,5 +27,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "## Learning Goals",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Masikaomondi/react-hooks-react-router-code-along.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Masikaomondi/react-hooks-react-router-code-along/issues"
+  },
+  "homepage": "https://github.com/Masikaomondi/react-hooks-react-router-code-along#readme"
 }
